--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
         <link rel="stylesheet" href="style.css" />
     </head>
   <body>
-    
+    <main>
+      <nav>
+        <div class="nav-center">
+          <h1>Color Flipper</h1>
+        </div>
+      </nav>
+
+      <section class="container">
+        <p>background color: #5984B8</p>
+      </section>
+      <button id="btn">Click Me</button>
+    </main>
+    <script src="app.js"></script>
   </body>
   
 </html>
