--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       <nav>
         <div class="nav-center">
           <h1>Color Flipper</h1>
+          <div class="nav-links">
+            <li>simple</li>
+            <li>hex</li>
+          </div>
         </div>
       </nav>
 
