--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <section class="container">
         <p>background color: #5984B8</p>
       </section>
+      <select>
+      </select>
       <button id="btn">Click Me</button>
     </main>
     <script src="app.js"></script>
